fix typo & layout

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <body>
     <!-- center -->
-    <div class="flex h-screen w-screen justify-center">
+    <div class="flex h-full w-full justify-center">
 
         <!-- row -->
         <div class="flex flex-col justify-center w-4/5	space-y-4">
@@ -94,7 +94,7 @@
                 <div class="collapse-content">
                     <form action="https://formsubmit.co/ffa7cbf7500544878ac78156e6434d57" method="POST">
                         <div class="join join-vertical w-full">
-                            <input type="hidden" name="_next" value="https://aidan.nl/?message20%success">
+                            <input type="hidden" name="_next" value="https://aidan.nl/?notify=message%20success">
                             <input type="text" name="name" placeholder="name" class="input join-item input-bordered	"
                                 required />
                             <input type="email" name="email" placeholder="email" class="input join-item input-bordered	"
