change button style

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     Discord: aiydn
                 </div>
                 <div class="collapse-content">
-                    <button class="btn btn-outline" onclick="discord()">copy username</button>
+                    <button class="btn input" onclick="discord()">copy username</button>
                 </div>
             </div>
             <!-- Nintendo Switch -->
@@ -67,7 +67,7 @@
                     Nintendo Switch: SW-7899-8096-6577
                 </div>
                 <div class="collapse-content">
-                    <button class="btn btn-outline"
+                    <button class="btn input"
                         onclick="window.location.href='https://lounge.nintendo.com/friendcode/7899-8096-6577/DBTpJyqwJy';">Open
                         in app</button>
 
@@ -81,7 +81,7 @@
                     Last.fm
                 </div>
                 <div class="collapse-content">
-                    <button class="btn btn-outline"
+                    <button class="btn input"
                         onclick="window.location.href='https://www.last.fm/user/aiydn';">Last.fm page</button>
                 </div>
             </div>
