Switch to daisyUI Accordion

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
             <!-- discord -->
             <div class="collapse bg-base-200">
-                <input type="checkbox" />
+                <input type="radio" name="buttons" /> 
                 <div class="collapse-title text-xl font-medium">
                     Discord: aiydn
                 </div>
@@ -62,7 +62,7 @@
             </div>
             <!-- Nintendo Switch -->
             <div class="collapse bg-base-200">
-                <input type="checkbox" />
+                <input type="radio" name="buttons" /> 
                 <div class="collapse-title text-xl font-medium">
                     Nintendo Switch: SW-7899-8096-6577
                 </div>
@@ -76,7 +76,7 @@
             </div>
             <!-- Last.FM -->
             <div class="collapse bg-base-200">
-                <input type="checkbox" />
+                <input type="radio" name="buttons" /> 
                 <div id="lastfm" class="collapse-title text-xl font-medium">
                     Last.fm
                 </div>
@@ -85,9 +85,9 @@
                         onclick="window.location.href='https://www.last.fm/user/aiydn';">Last.fm page</button>
                 </div>
             </div>
-            <!-- Mail -->
+            <!-- Message -->
             <div class="collapse bg-base-200">
-                <input type="checkbox" />
+                <input type="radio" name="buttons" /> 
                 <div id="lastfm" class="collapse-title text-xl font-medium">
                     Send Message
                 </div>
