--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     src="https://api.lanyard.rest/590834029666893825.webp" />
             </div>
         </div>
-        <p id="name" class="text-2xl text-center"></p>
+        <p id="name" class="text-2xl text-center">Aidan</p>
         <p id="music" class="hidden text-xl text-center"></p>
         <p id="game" class="hidden text-xl text-center"></p>
 
