--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="collapse bg-base-200">
             <input type="radio" name="buttons" />
             <div id="discord" class="collapse-title text-xl font-medium">
-                Discord: 
+                Discord: aiydn
             </div>
             <div class="collapse-content">
                 <button class="btn input" onclick="discord()">copy username</button>
