--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
         <!-- avatar -->
         <div class="avatar justify-center">
             <div class="w-64 rounded-full">
-                <img
-                    src="https://api.lanyard.rest/590834029666893825.webp" />
+                <img src="https://api.lanyard.rest/590834029666893825.webp" />
             </div>
         </div>
         <p class="text-2xl text-center">Aidan</p>
