--- a/index.html
+++ b/index.html
@@ -11,6 +11,23 @@
 
         gtag('config', 'G-Z9Y8QS4XM0');
     </script>
+    <!-- <script src="https://kit.fontawesome.com/87883e0d91.js" crossorigin="anonymous"></script> -->
+<style>
+
+@font-face {
+   font-family: fontawesome_brands;
+   src: url(./font/fa-brands-400.woff2);
+}
+
+@font-face {
+   font-family: fontawesome_solid;
+   src: url(./font/fa-solid-900.woff2);
+}
+.fontawesome {
+font-family: fontawesome_solid, fontawesome_brands;
+}
+
+</style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>aidan.nl</title>
@@ -22,6 +39,9 @@
     <link href="./tailwind.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 </head>
+
+
+
 
 <body class="flex h-full w-full justify-center">
     <div class="flex flex-col justify-center w-4/5 space-y-4">
@@ -47,9 +67,7 @@
         <!-- discord -->
         <div class="collapse bg-base-200">
             <input type="radio" name="buttons" />
-            <div id="discord" class="collapse-title text-xl font-medium">
-                Discord: aiydn
-            </div>
+            <div id="discord" class="collapse-title text-xl font-medium"> Discord: aiydn</div>
             <div class="collapse-content">
                 <button class="btn input" onclick="discord()">copy username</button>
             </div>
@@ -57,9 +75,7 @@
         <!-- Nintendo Switch -->
         <div class="collapse bg-base-200">
             <input type="radio" name="buttons" />
-            <div class="collapse-title text-xl font-medium">
-                Nintendo Switch: SW-7899-8096-6577
-            </div>
+            <div class="collapse-title text-xl font-medium"> Nintendo Switch: SW-7899-8096-6577</div>
             <div class="collapse-content">
                 <button class="btn input"
                     onclick="window.location.href='https://lounge.nintendo.com/friendcode/7899-8096-6577/DBTpJyqwJy';">Open
@@ -71,9 +87,7 @@
         <!-- Last.FM -->
         <div class="collapse bg-base-200">
             <input type="radio" name="buttons" />
-            <div id="lastfm" class="collapse-title text-xl font-medium">
-                Last.fm
-            </div>
+            <div id="lastfm" class="collapse-title text-xl font-medium"> Last.fm</div>
             <div class="collapse-content">
                 <button class="btn input" onclick="window.location.href='https://www.last.fm/user/aiydn';">Last.fm
                     page</button>
@@ -82,9 +96,8 @@
         <!-- Message -->
         <div class="collapse bg-base-200">
             <input type="radio" name="buttons" />
-            <div id="lastfm" class="collapse-title text-xl font-medium">
-                Send Message
-            </div>
+            <div class="collapse-title text-xl font-medium">
+                 Send Message</div>
             <div class="collapse-content">
                 <form action="https://formsubmit.co/ffa7cbf7500544878ac78156e6434d57" method="POST">
                     <div class="join join-vertical w-full">
