--- a/index.html
+++ b/index.html
@@ -12,22 +12,26 @@
         gtag('config', 'G-Z9Y8QS4XM0');
     </script>
     <!-- <script src="https://kit.fontawesome.com/87883e0d91.js" crossorigin="anonymous"></script> -->
-<style>
+    <style>
+        @font-face {
+            font-family: fontawesome_brands;
+            src: url(./font/fa-brands-400.woff2);
+        }
 
-@font-face {
-   font-family: fontawesome_brands;
-   src: url(./font/fa-brands-400.woff2);
-}
+        @font-face {
+            font-family: fontawesome_solid;
+            src: url(./font/fa-solid-900.woff2);
+        }
 
-@font-face {
-   font-family: fontawesome_solid;
-   src: url(./font/fa-solid-900.woff2);
-}
-.fontawesome {
-font-family: fontawesome_solid, fontawesome_brands;
-}
+        @font-face {
+            font-family: fontawesome_regular;
+            src: url(./font/fa-regular-900.woff2);
+        }
 
-</style>
+        .fontawesome {
+            font-family: fontawesome_solid, fontawesome_brands;
+        }
+    </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>aidan.nl</title>
