--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         gtag('config', 'G-Z9Y8QS4XM0');
     </script>
     <meta name="robots" content="INDEX,FOLLOW" />
+    <meta name="description" content="Discord: aiydn">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>aidan.nl</title>
