--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>aidan.nl</title>
     <link rel="icon" type="image/x-icon"
-        href="https://cdn.discordapp.com/avatars/590834029666893825/a154706776360a285411602b8d6b0853">
+        href="https://api.lanyard.rest/590834029666893825.webp">
     <meta name="title" content="aidan.nl">
     <meta name="keywords" content="aidan.nl, Aidan">
     <meta name="author" content="Aidan">
