--- a/index.html
+++ b/index.html
@@ -37,9 +37,12 @@
             </div>
         </div>
         <!-- avatar -->
-        <div class="avatar justify-center">
-            <div class="w-64 rounded-full">
-                <img src="https://api.lanyard.rest/590834029666893825.webp" />
+        <div class="collapse">
+            <input type="radio" name="buttons" />
+            <div class="collapse-title avatar justify-center">
+                <div class="w-64 rounded-full">
+                    <img src="https://api.lanyard.rest/590834029666893825.webp" />
+                </div>
             </div>
         </div>
         <p class="text-2xl text-center">Aidan</p>
