change radio to checkbox

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <p class="text-2xl text-center">Aidan</p>
         <!-- discord -->
         <div class="collapse bg-base-200">
-            <input type="radio" name="buttons" />
+            <input type="checkbox" />
             <div class="collapse-title text-xl font-medium m-2">
                 <div class="inline-block mr-2"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5"
                         fill="currentColor" viewBox="0 0 24 24" transform="scale(2)">
@@ -60,7 +60,7 @@
         </div>
         <!-- Nintendo Switch -->
         <div class="collapse bg-base-200">
-            <input type="radio" name="buttons" />
+            <input type="checkbox" />
             <div class="collapse-title text-xl font-medium m-2">
                 <div class="inline-block mr-2"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5"
                         fill="currentColor" viewBox="0 0 32 32" transform="scale(1.5)">
@@ -80,7 +80,7 @@
         </div>
         <!-- Last.FM -->
         <div class="collapse bg-base-200">
-            <input type="radio" name="buttons" />
+            <input type="checkbox" />
             <div class="collapse-title text-xl font-medium m-2">
                 <div class="inline-block mr-2" id="music-icon"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5"
                         fill="currentColor" viewBox="0 0 24 24" transform="scale(2)">
@@ -101,7 +101,7 @@
         </div>
         <!-- Message -->
         <div class="collapse bg-base-200">
-            <input type="radio" name="buttons" />
+            <input type="checkbox" />
             <div class="collapse-title text-xl font-medium m-2">
                 <div class="inline-block mr-2"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5"
                         fill="currentColor" viewBox="0 0 24 24" transform="scale(2)">
