switch webp to png

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>aidan.nl</title>
-    <link rel="icon" type="image/x-icon" href="https://api.lanyard.rest/590834029666893825.webp">
+    <link rel="icon" type="image/x-icon" href="https://api.lanyard.rest/590834029666893825.png">
     <meta name="title" content="aidan.nl">
     <meta name="keywords" content="aidan.nl, Aidan">
     <meta name="author" content="Aidan">
